--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cau.dururung.dururung" >
+    package="cau.dururung.dururung">
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -8,18 +11,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Dururung" >
-        <activity android:name=".MorningcallActivity" android:exported="true">
-
-        </activity>
-        <activity android:name=".MainActivity" >
+        android:theme="@style/Theme.Dururung">
+        <activity android:name=".AlarmActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".MorningcallActivity"
+            android:exported="true"/>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RatingActivity" android:exported="true"></activity>
+        <activity
+            android:name=".RatingActivity"
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
