--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dururung">
-        <activity android:name=".AlarmActivity"
-            android:exported="true"/>
+        <activity android:name=".PassActivity"></activity>
+        <activity
+            android:name=".AlarmActivity"
+            android:exported="true" />
         <activity
             android:name=".MorningcallActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
