--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".RatingActivity"
-            android:exported="true" />
-
+        <activity android:name=".MorningcallActivity" android:exported="true"></activity>
+        <activity android:name=".WhiteNoiseActivity" android:exported="true"></activity>
+        <activity android:name=".RatingActivity" android:exported="true"></activity>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
