--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dururung">
-        <activity android:name=".PassActivity"></activity>
+        <activity android:name=".db.RecommendActivity"></activity>
+        <activity android:name=".PassActivity" />
         <activity
             android:name=".AlarmActivity"
             android:exported="true" />
