--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dururung">
-        <activity android:name=".db.RecommendActivity"></activity>
+        <activity
+            android:name=".MLActivity"
+            android:exported="true" />
         <activity android:name=".PassActivity" />
         <activity
             android:name=".AlarmActivity"
